fix(styling): ensure margins collapse

--- a/src/client/styles/layout/host.scss
+++ b/src/client/styles/layout/host.scss
@@ -2,8 +2,10 @@
  * HOST
  *******/
 :host {
-	contain: content;
+	// paint prevents popover inside content from being over everything
+	contain: layout style;
 	display: block;
+	margin-bottom: 18px;
 }
 :host([hidden]) {
 	display: none;
